@@ -176,6 +176,15 @@
 		</renderlet:SUBMIT>
 
 		<renderlet:HIDDEN name="method_of_payment">
+			<validators>
+				<validator:STANDARD>
+					<userobj>
+						<extension>this</extension>
+						<method>isMethodOfPaymentSelected</method>
+						<message>LLL:EXT:seminars/pi1/locallang.php:message_chooseMethodOfPayment</message>
+					</userobj>
+				</validator:STANDARD>
+			</validators>
 			<process>
 				<userobj>
 					<extension>this</extension>
