@@ -1,4 +1,5 @@
 0.5.0
+- Fix: The validator for the method of payment is missing in step 2 of the registration (#660)
 - Fix: The label for the allowed methods of payment is not displayed (#662)
 - Fix: Config check warning in mod1 and mod2 in about any folder (#592)
 - Change: Move the "allow multiple registrations" and "needs registration" checkboxes from the date records to the topic records (#651)
